Removed use of java.nio API calls added in Java11